// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mutations.updateGlobalDistrictMutation Admin can update a global district 1`] = `
Object {
  "updateGlobalDistrict": Object {
    "district": Object {
      "background": Object {
        "enabled": false,
      },
      "border": Object {
        "color": "#FFFFFF",
        "enabled": true,
        "opacity": 0.8,
        "size": 1,
      },
      "displayedOnMap": true,
      "geojson": null,
      "id": "RGlzdHJpY3Q6Z2xvYmFsRGlzdHJpY3Qx",
      "translations": Array [
        Object {
          "description": "Short description.",
          "locale": "en-GB",
          "name": "My new awesome district !",
          "titleOnMap": "Short name",
        },
        Object {
          "description": "Ainsi les derniers seront les premiers, et les premiers seront les derniers, car il y a beaucoup d'appelés, mais peu d'élus.",
          "locale": "fr-FR",
          "name": "Premier Quartier",
          "titleOnMap": "1er",
        },
      ],
    },
    "userErrors": Array [],
  },
}
`;

exports[`mutations.updateGlobalDistrictMutation Admin wants to receive error during updating a district in projects 1`] = `
Object {
  "updateGlobalDistrict": Object {
    "district": null,
    "userErrors": Array [
      Object {
        "message": "Unknown project district with id: wrongDistrictId",
      },
    ],
  },
}
`;

exports[`mutations.updateGlobalDistrictMutation Admin wants to update a district in projects 1`] = `
Object {
  "updateGlobalDistrict": Object {
    "district": Object {
      "background": Object {
        "enabled": false,
      },
      "border": Object {
        "color": "#FFFFFF",
        "enabled": true,
        "opacity": 0.8,
        "size": 1,
      },
      "displayedOnMap": true,
      "geojson": null,
      "id": "RGlzdHJpY3Q6Z2xvYmFsRGlzdHJpY3Qx",
      "translations": Array [
        Object {
          "description": "Short description.",
          "locale": "en-GB",
          "name": "My new awesome district !",
          "titleOnMap": "Short name",
        },
        Object {
          "description": "Ainsi les derniers seront les premiers, et les premiers seront les derniers, car il y a beaucoup d'appelés, mais peu d'élus.",
          "locale": "fr-FR",
          "name": "Premier Quartier",
          "titleOnMap": "1er",
        },
      ],
    },
    "userErrors": Array [],
  },
}
`;

exports[`mutations.updateGlobalDistrictMutation Admin wants to update a district with another translation 1`] = `
Object {
  "updateGlobalDistrict": Object {
    "district": Object {
      "background": Object {
        "enabled": false,
      },
      "border": Object {
        "color": "#FFFFFF",
        "enabled": true,
        "opacity": 0.8,
        "size": 1,
      },
      "displayedOnMap": true,
      "geojson": null,
      "id": "RGlzdHJpY3Q6Z2xvYmFsRGlzdHJpY3Qx",
      "translations": Array [
        Object {
          "description": "Short description.",
          "locale": "en-GB",
          "name": "My new awesome district !",
          "titleOnMap": "Short name",
        },
        Object {
          "description": "Ainsi les derniers seront les premiers, et les premiers seront les derniers, car il y a beaucoup d'appelés, mais peu d'élus.",
          "locale": "fr-FR",
          "name": "Mon super quartier !",
          "titleOnMap": "1er",
        },
      ],
    },
    "userErrors": Array [],
  },
}
`;
